[package]
name = "abi_conformance"
description = "Calimero ABI conformance test application"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
calimero-sdk.workspace = true
calimero-storage.workspace = true
calimero-wasm-abi-v1.workspace = true
thiserror = "1.0.56"
bs58 = "0.5.1"

[build-dependencies]
calimero-wasm-abi-v1.workspace = true
syn = { version = "2.0", features = ["full"] }

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true 