[package]
name = "abi_conformance"
description = "Calimero ABI conformance test application"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
calimero-sdk.workspace = true
calimero-storage.workspace = true
calimero-wasm-abi-v1.workspace = true
thiserror.workspace = true
bs58.workspace = true

[build-dependencies]
calimero-wasm-abi-v1.workspace = true
syn.workspace = true

[lints]
workspace = true

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true 