[package]
name = "abi_conformance"
description = "Calimero ABI conformance test application"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
calimero-sdk.workspace = true
thiserror.workspace = true

[build-dependencies]
calimero-wasm-abi.workspace = true

[package.metadata.workspaces]
independent = true

[lints]
workspace = true

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true 
