[package]
name = "abi_demo"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Example SSApp demonstrating ABI generation"

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror.workspace = true
calimero-sdk.workspace = true
calimero-storage.workspace = true
abi-macros = { path = "../../crates/abi-macros", features = ["abi-export"] }
abi-core = { path = "../../crates/abi-core", features = ["abi-export"] }
borsh = { workspace = true, features = ["derive"] }

[build-dependencies]
abi-core = { path = "../../crates/abi-core", features = ["abi-export"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

[features]
abi-export = []
abi-conformance = [] 