[package]
name = "access-control"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
calimero-sdk.workspace = true
calimero-storage.workspace = true
borsh = "1.0"
hex = "0.4"

[build-dependencies]
calimero-wasm-abi.workspace = true
serde_json.workspace = true

[package.metadata.workspaces]
independent = true
