[package]
name = "blob-test"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror.workspace = true
calimero-sdk.workspace = true
calimero-storage.workspace = true 
hex.workspace = true
