[package]
name = "blockchain"
description = "Calimero blockchain integrations demo (NEAR, ICP, Ethereum proposals)"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
calimero-sdk.workspace = true
calimero-storage.workspace = true
hex.workspace = true
serde_json.workspace = true

[build-dependencies]
calimero-wasm-abi.workspace = true
serde_json.workspace = true

[package.metadata.workspaces]
independent = true
