[package]
name = "event-callback"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
calimero-sdk = { path = "../../crates/sdk" }
calimero-storage = { path = "../../crates/storage" }
thiserror = "2.0"

[build-dependencies]
calimero-wasm-abi = { path = "../../crates/wasm-abi" }
serde_json = "1.0"
