[package]
name = "event-callback"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
calimero-sdk = { path = "../../crates/sdk" }
calimero-storage = { path = "../../crates/storage" }
thiserror = "2.0"
bs58 = "0.5"

[build-dependencies]
calimero-wasm-abi = { path = "../../crates/wasm-abi" }
serde_json = "1.0"
